# SDL2_core

./: CMakeLists.txt  README.md
include/: SDL2_core.hpp
test/: test.cpp
